Fix button appearance on safari

--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -36,6 +36,7 @@
 }
 
 .btn {
+  -webkit-appearance: none;
   min-height: 50px;
   padding-right: 1rem;
   padding-left: 1rem;
